project/lang/langParser.py
# Generated from project/lang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'is'", "'graph'", "'='", "'remove'", 
                     "'vertex'", "'edge'", "'vertices'", "'from'", "'add'", 
                     "'to'", "'['", "','", "']'", "'('", "')'", "'|'", "'^'", 
                     "'.'", "'&'", "'..'", "'return'", "'where'", "'reachable'", 
                     "'in'", "'by'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "VAR", "NUM", "CHAR" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_declare = 2
    RULE_bind = 3
    RULE_remove = 4
    RULE_add = 5
    RULE_expr = 6
    RULE_set_expr = 7
    RULE_edge_expr = 8
    RULE_regexp = 9
    RULE_range = 10
    RULE_select = 11
    RULE_v_filter = 12

    ruleNames =  [ "prog", "stmt", "declare", "bind", "remove", "add", "expr", 
                   "set_expr", "edge_expr", "regexp", "range", "select", 
                   "v_filter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    VAR=28
    NUM=29
    CHAR=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.StmtContext)
            else:
                return self.getTypedRuleContext(langParser.StmtContext,i)


        def getRuleIndex(self):
            return langParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = langParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1058) != 0):
                self.state = 26
                self.stmt()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bind(self):
            return self.getTypedRuleContext(langParser.BindContext,0)


        def add(self):
            return self.getTypedRuleContext(langParser.AddContext,0)


        def remove(self):
            return self.getTypedRuleContext(langParser.RemoveContext,0)


        def declare(self):
            return self.getTypedRuleContext(langParser.DeclareContext,0)


        def getRuleIndex(self):
            return langParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = langParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.bind()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.add()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.remove()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def getRuleIndex(self):
            return langParser.RULE_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare" ):
                listener.enterDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare" ):
                listener.exitDeclare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = langParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(langParser.T__0)
            self.state = 39
            self.match(langParser.VAR)
            self.state = 40
            self.match(langParser.T__1)
            self.state = 41
            self.match(langParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext,0)


        def getRuleIndex(self):
            return langParser.RULE_bind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBind" ):
                listener.enterBind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBind" ):
                listener.exitBind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBind" ):
                return visitor.visitBind(self)
            else:
                return visitor.visitChildren(self)




    def bind(self):

        localctx = langParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(langParser.T__0)
            self.state = 44
            self.match(langParser.VAR)
            self.state = 45
            self.match(langParser.T__3)
            self.state = 46
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext,0)


        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def getRuleIndex(self):
            return langParser.RULE_remove

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemove" ):
                listener.enterRemove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemove" ):
                listener.exitRemove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemove" ):
                return visitor.visitRemove(self)
            else:
                return visitor.visitChildren(self)




    def remove(self):

        localctx = langParser.RemoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_remove)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(langParser.T__4)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 50
            self.expr()
            self.state = 51
            self.match(langParser.T__8)
            self.state = 52
            self.match(langParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext,0)


        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def getRuleIndex(self):
            return langParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)




    def add(self):

        localctx = langParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(langParser.T__9)
            self.state = 55
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 56
            self.expr()
            self.state = 57
            self.match(langParser.T__10)
            self.state = 58
            self.match(langParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(langParser.NUM, 0)

        def CHAR(self):
            return self.getToken(langParser.CHAR, 0)

        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def edge_expr(self):
            return self.getTypedRuleContext(langParser.Edge_exprContext,0)


        def set_expr(self):
            return self.getTypedRuleContext(langParser.Set_exprContext,0)


        def regexp(self):
            return self.getTypedRuleContext(langParser.RegexpContext,0)


        def select(self):
            return self.getTypedRuleContext(langParser.SelectContext,0)


        def getRuleIndex(self):
            return langParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = langParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(langParser.NUM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(langParser.CHAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.match(langParser.VAR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.edge_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.set_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.regexp(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 66
                self.select()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExprContext)
            else:
                return self.getTypedRuleContext(langParser.ExprContext,i)


        def getRuleIndex(self):
            return langParser.RULE_set_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_expr" ):
                listener.enterSet_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_expr" ):
                listener.exitSet_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet_expr" ):
                return visitor.visitSet_expr(self)
            else:
                return visitor.visitChildren(self)




    def set_expr(self):

        localctx = langParser.Set_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(langParser.T__11)
            self.state = 70
            self.expr()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 71
                self.match(langParser.T__12)
                self.state = 72
                self.expr()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(langParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExprContext)
            else:
                return self.getTypedRuleContext(langParser.ExprContext,i)


        def getRuleIndex(self):
            return langParser.RULE_edge_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_expr" ):
                listener.enterEdge_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_expr" ):
                listener.exitEdge_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge_expr" ):
                return visitor.visitEdge_expr(self)
            else:
                return visitor.visitChildren(self)




    def edge_expr(self):

        localctx = langParser.Edge_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edge_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(langParser.T__14)
            self.state = 81
            self.expr()
            self.state = 82
            self.match(langParser.T__12)
            self.state = 83
            self.expr()
            self.state = 84
            self.match(langParser.T__12)
            self.state = 85
            self.expr()
            self.state = 86
            self.match(langParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(langParser.CHAR, 0)

        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def regexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.RegexpContext)
            else:
                return self.getTypedRuleContext(langParser.RegexpContext,i)


        def range_(self):
            return self.getTypedRuleContext(langParser.RangeContext,0)


        def getRuleIndex(self):
            return langParser.RULE_regexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegexp" ):
                listener.enterRegexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegexp" ):
                listener.exitRegexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegexp" ):
                return visitor.visitRegexp(self)
            else:
                return visitor.visitChildren(self)



    def regexp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = langParser.RegexpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_regexp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.state = 89
                self.match(langParser.CHAR)
                pass
            elif token in [28]:
                self.state = 90
                self.match(langParser.VAR)
                pass
            elif token in [15]:
                self.state = 91
                self.match(langParser.T__14)
                self.state = 92
                self.regexp(0)
                self.state = 93
                self.match(langParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = langParser.RegexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_regexp)
                        self.state = 97
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 98
                        self.match(langParser.T__16)
                        self.state = 99
                        self.regexp(5)
                        pass

                    elif la_ == 2:
                        localctx = langParser.RegexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_regexp)
                        self.state = 100
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 101
                        self.match(langParser.T__18)
                        self.state = 102
                        self.regexp(3)
                        pass

                    elif la_ == 3:
                        localctx = langParser.RegexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_regexp)
                        self.state = 103
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 104
                        self.match(langParser.T__19)
                        self.state = 105
                        self.regexp(2)
                        pass

                    elif la_ == 4:
                        localctx = langParser.RegexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_regexp)
                        self.state = 106
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 107
                        self.match(langParser.T__17)
                        self.state = 108
                        self.range_()
                        pass

             
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(langParser.NUM)
            else:
                return self.getToken(langParser.NUM, i)

        def getRuleIndex(self):
            return langParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRange" ):
                return visitor.visitRange(self)
            else:
                return visitor.visitChildren(self)




    def range_(self):

        localctx = langParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_range)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(langParser.T__11)
            self.state = 115
            self.match(langParser.NUM)
            self.state = 116
            self.match(langParser.T__20)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 117
                self.match(langParser.NUM)


            self.state = 120
            self.match(langParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(langParser.VAR)
            else:
                return self.getToken(langParser.VAR, i)

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext,0)


        def v_filter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.V_filterContext)
            else:
                return self.getTypedRuleContext(langParser.V_filterContext,i)


        def getRuleIndex(self):
            return langParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = langParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 122
                self.v_filter()


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 125
                self.v_filter()


            self.state = 128
            self.match(langParser.T__21)
            self.state = 129
            self.match(langParser.VAR)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 130
                self.match(langParser.T__12)
                self.state = 131
                self.match(langParser.VAR)


            self.state = 134
            self.match(langParser.T__22)
            self.state = 135
            self.match(langParser.VAR)
            self.state = 136
            self.match(langParser.T__23)
            self.state = 137
            self.match(langParser.T__8)
            self.state = 138
            self.match(langParser.VAR)
            self.state = 139
            self.match(langParser.T__24)
            self.state = 140
            self.match(langParser.VAR)
            self.state = 141
            self.match(langParser.T__25)
            self.state = 142
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V_filterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(langParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext,0)


        def getRuleIndex(self):
            return langParser.RULE_v_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV_filter" ):
                listener.enterV_filter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV_filter" ):
                listener.exitV_filter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV_filter" ):
                return visitor.visitV_filter(self)
            else:
                return visitor.visitChildren(self)




    def v_filter(self):

        localctx = langParser.V_filterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_v_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(langParser.T__26)
            self.state = 145
            self.match(langParser.VAR)
            self.state = 146
            self.match(langParser.T__24)
            self.state = 147
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.regexp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def regexp_sempred(self, localctx:RegexpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         




